# ------------------------------------------------------
# THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
# ------------------------------------------------------

type EventParameter {
  id: Int!
  name: String!
  type: String!
  value: String!
  createdAt: DateTime!
  eventLog: EventLog!
}

"""
A date-time string at UTC, such as 2019-12-03T09:54:33Z, compliant with the date-time format.
"""
scalar DateTime

type EventLog {
  id: Int!
  blockNumber: Int!
  logIndex: Int!
  transactionHash: String
  signature: String
  topic: String
  createdAt: DateTime!
  event: Event!
  transaction: Transaction!
  eventParameters: [EventParameter!]
}

type Transaction {
  id: Int!
  blockNumber: Int!
  blockHash: String!
  hash: String!
  type: Int!
  to: String!
  from: String!
  nonce: Int!
  gasLimit: String!
  gasPrice: String!
  maxPriorityFeePerGas: String!
  maxFeePerGas: String!
  data: String!
  value: String!
  chainId: String!
  r: String!
  s: String!
  yParity: Int!
  createdAt: DateTime!
  contract: Contract!
  eventLogs: [EventLog!]
}

type Contract {
  id: Int!
  address: String!
  name: String
  abi: String
  createdAt: DateTime!
  status: ContractStatus!
  events: [Event!]
  transactions: [Transaction!]
}

"""Enum representing the status of a process chunk"""
enum ContractStatus {
  CREATED
  ABI_ADDED
  INDEXING
  LISTENING
  FAILED
  PAUSED
}

type Event {
  id: Int!
  name: String!
  signature: String!
  createdAt: DateTime!
  contract: Contract!
  eventLogs: [EventLog!]
}

type Query {
  eventLogs(filter: EventLogFilter): [EventLog!]!
  eventLog(id: Int!): EventLog!
}

input EventLogFilter {
  contractAddress: String
  eventName: String
  signature: String
}